<resources>
    <string name="app_name">WhatChat</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_textview">By clicking RESET,  you will receive an email to reset your password.</string>
    <string name="your_email">Your email…</string>
    <string name="reset">Reset</string>
    <string name="search">Search...</string>
    <string name="type_something">Type something..</string>
    <string name="name">Name</string>

</resources>
