<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!--    <include
                android:id="@+id/toolbar"
                layout="@layout/bar_layout" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_speech" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="25sp"
                    android:visibility="gone" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/send_reset_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    app:met_floatingLabel="normal"
                    app:met_underlineColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/reset_pass_btn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_bg"
                    android:padding="10dp"
                    android:text="@string/reset"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/reset_textview"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>